ingress-minikube/ingress-tests.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  labels:
    name: nginx-ing
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: nginx-cluster-ip
            port:
              number: 80

---

kind: Service
apiVersion: v1
metadata:
  name: nginx-cluster-ip
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort:  80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
